fix for daisy build

--- a/recipes-custom/busybox/files/neutrino-busybox.cfg
+++ b/recipes-custom/busybox/files/neutrino-busybox.cfg
@@ -44,3 +44,7 @@ CONFIG_HDPARM=y
 # CONFIG_FEATURE_HDPARM_HDIO_TRISTATE_HWIF is not set
 # CONFIG_FEATURE_HDPARM_HDIO_GETSET_DMA is not set
 CONFIG_FEATURE_VERBOSE_USAGE=y
+CONFIG_ADDUSER=y
+CONFIG_DELUSER=y
+CONFIG_PASSWD=y
+CONFIG_USE_BB_PWD_GRP=y
