--- a/recipes-custom/busybox/files/inetd.conf
+++ b/recipes-custom/busybox/files/inetd.conf
@@ -19,5 +19,5 @@
 #time		stream	tcp	nowait	root	internal
 #time		dgram	udp	wait	root	internal
 #
-21 stream tcp nowait root ftpd ftpd /files/to/serve
+21 stream tcp nowait root ftpd ftpd /
 
